tests/ui/borrowck/alias-liveness/higher-ranked-outlives-for-capture.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/higher-ranked-outlives-for-capture.rs:13:11
   |
LL |     test(&vec![])
   |     ------^^^^^^-
   |     |     |
   |     |     creates a temporary value which is freed while still in use
   |     argument requires that borrow lasts for `'static`
LL | }
   | - temporary value is freed at the end of this statement

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0716`.
